Change selection logic to be FIFO queue based, maximum of two